add dynamic templates
